--- a/CalendarWidget/Base.lproj/MainInterface.storyboard
+++ b/CalendarWidget/Base.lproj/MainInterface.storyboard
@@ -43,12 +43,31 @@
                                     <action selector="nextDay:" destination="lhJ-F1-SaC" eventType="touchUpInside" id="CMt-BI-VQ8"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="TopLeft" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQk-WH-oDR">
+                                <rect key="frame" x="19" y="10" width="358" height="86"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="ZDI-hu-FaE"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Calendar">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="menu" size="14"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="f5L-ho-hpC" secondAttribute="trailing" constant="10" id="87w-P0-xLr"/>
+                            <constraint firstAttribute="trailing" secondItem="f5L-ho-hpC" secondAttribute="trailing" constant="5" id="87w-P0-xLr"/>
                             <constraint firstItem="fku-2Q-BjI" firstAttribute="top" secondItem="PfZ-CC-xmf" secondAttribute="bottom" constant="10" id="DXm-Kn-YvV"/>
+                            <constraint firstItem="iQk-WH-oDR" firstAttribute="leading" secondItem="0mK-L8-bOk" secondAttribute="leading" constant="5" id="G9j-GN-WON"/>
+                            <constraint firstItem="f5L-ho-hpC" firstAttribute="leading" secondItem="iQk-WH-oDR" secondAttribute="trailing" constant="5" id="KUx-Iz-J5K"/>
                             <constraint firstItem="f5L-ho-hpC" firstAttribute="top" secondItem="yaP-4H-5bA" secondAttribute="bottom" constant="10" id="LE1-Zd-8CC"/>
-                            <constraint firstAttribute="trailing" secondItem="PfZ-CC-xmf" secondAttribute="trailing" constant="10" id="ipu-Y8-MeU"/>
+                            <constraint firstItem="PfZ-CC-xmf" firstAttribute="leading" secondItem="iQk-WH-oDR" secondAttribute="trailing" constant="5" id="Sof-MS-Fl2"/>
+                            <constraint firstAttribute="trailing" secondItem="PfZ-CC-xmf" secondAttribute="trailing" constant="5" id="ipu-Y8-MeU"/>
+                            <constraint firstItem="iQk-WH-oDR" firstAttribute="centerY" secondItem="0mK-L8-bOk" secondAttribute="centerY" identifier="calendar" id="pYK-lh-JNE"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
@@ -60,6 +79,7 @@
                     <connections>
                         <outlet property="buttonDown" destination="PfZ-CC-xmf" id="3oO-bK-ygz"/>
                         <outlet property="buttonUp" destination="f5L-ho-hpC" id="cev-gK-eYd"/>
+                        <outlet property="dayInfo" destination="iQk-WH-oDR" id="ZeR-9E-f3V"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4kz-3g-62S" userLabel="First Responder" sceneMemberID="firstResponder"/>
